# gazelle_poc

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  rules_jvm_external~~maven~maven_install.json
app/src/main/java/: Dummy.java
app/src/main/java/com/example/app/: MainApp.java
utils/src/main/java/com/example/util/: StringUtil.java
utils/src/main/java/com/example/util2/: UtilityHelper.java
utils/src/main/java/com/example/util3/: UtilityHelper2.java
utils/src/test/java/com/example/util/: BUILD.bazel  StringUtilTest.java
