bazel_dep(name = "rules_jvm_external", version = "6.4")
bazel_dep(name = "contrib_rules_jvm", version = "0.24.0")
bazel_dep(name = "gazelle", version = "0.42.0")

#use_extension("@contrib_rules_jvm//:extensions.bzl", "contrib_rules_jvm_deps")

use_extension("@contrib_rules_jvm//:gazelle_setup.bzl", "contrib_rules_jvm_gazelle_setup")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "org.junit.platform:junit-platform-console-standalone:1.10.2",
        "org.junit.jupiter:junit-jupiter-engine:5.10.2",
        "org.junit.jupiter:junit-jupiter-api:5.10.2",
        "org.junit.jupiter:junit-jupiter-params:5.10.2",
        "org.junit.platform:junit-platform-launcher:1.10.2",
        "org.junit.platform:junit-platform-reporting:1.10.2",
        "org.apache.commons:commons-lang3:3.4",
    ],
    lock_file = "//:rules_jvm_external~~maven~maven_install.json",
    repositories = [
        "https://repo.maven.apache.org/maven2",
    ],
)
use_repo(maven, "maven")
