load("@contrib_rules_jvm//java:defs.bzl", "java_junit5_test", "java_test_suite")

TEST_FILES = glob(["*.java"])

[java_junit5_test(
    name = f[:-5].replace(".java.", ""),
    size = "small",
    srcs = glob(["*.java"]),
    tags = [
        "L2",
        "exclusive",
    ],
    test_class = "com.example.util." + f[:-5],
    runtime_deps = [
        "@maven//:org_junit_jupiter_junit_jupiter_engine",
        "@maven//:org_junit_platform_junit_platform_launcher",
        "@maven//:org_junit_platform_junit_platform_reporting",
    ],
    deps = [
        "//utils/src/main/java/com/example/util",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
    ],
) for f in TEST_FILES]

# keep
java_test_suite(
    name = "util",
    srcs = [],
)
